--- a/options.html
+++ b/options.html
@@ -1,4 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <body></body>
+  <head>
+    <title>Wikipedia Plus Options</title>
+    <link rel="icon" href="/assets/image/favicon.1.png"><style type="text/css">body {
+  font-family: Helvetica, sans-serif;
+}
+h1 {
+  color: #4682b4;
+}
+input {
+  margin: 10px;
+}
+input[type="text"] {
+  font-size: 1em;
+  border-radius: 5px;
+  border: 2px solid #4682b4;
+  padding: 5px;
+}
+input[type="text"]:focus {
+  outline: none;
+}
+button {
+  font-size: 1em;
+  padding: 5px;
+  border-radius: 5px;
+}
+.foot {
+  margin-top: 20px;
+  color: #888;
+  font-size: 0.9em;
+}
+.foot a {
+  color: #444;
+  text-decoration: none;
+}
+.foot a:hover {
+  color: #000;
+}
+.trademark-legend {
+  margin-top: 10px;
+  font-size: 0.9em;
+}
+</style>
+  </head>
+  <body>
+    <h1>Wikipedia Plus Options</h1>
+    <div class="foot">&copy; 2013 <a href="http://twitter.com/falcondai" target="_blank">Falcon Dai</a>
+      <div class="trademark-legend">Disclaimer: Wikipedia and its associated marks are official trademarks of the Wikimedia Foundation in the United States and other countries. These marks are being used under license by the Wikimedia Foundation. Wikipedia Plus Chrome Extension is not endorsed by or affiliated with the Wikimedia Foundation.</div>
+    </div>
+  </body>
 </html>
