improved enlarged image error handling, + entity excerpt tooltip

--- a/options.html
+++ b/options.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Wikipedia Plus Options</title>
-    <link rel="icon" href="/assets/image/favicon.1.png"><style type="text/css">body {
+    <title>Options : Wikipedia Plus</title>
+    <link rel="icon" href="/assets/image/favicon.png"><style type="text/css">body {
   font-family: Helvetica, sans-serif;
 }
 h1 {
@@ -44,9 +44,16 @@ button {
 </style>
   </head>
   <body>
-    <h1>Wikipedia Plus Options</h1>
+    <h1>Options : Wikipedia Plus</h1>
+    <ul>
+      <li>turn section titles into links</li>
+      <li>enlarge images</li>
+      <li>show snippet for Wikipedia links</li>
+    </ul>
     <div class="foot">&copy; 2013 <a href="http://twitter.com/falcondai" target="_blank">Falcon Dai</a>
       <div class="trademark-legend">Disclaimer: Wikipedia and its associated marks are official trademarks of the Wikimedia Foundation in the United States and other countries. These marks are being used under license by the Wikimedia Foundation. Wikipedia Plus Chrome Extension is not endorsed by or affiliated with the Wikimedia Foundation.</div>
     </div>
+    <script href="/vendor/jquery.js"></script>
+    <script href="/options.js"></script>
   </body>
 </html>
